--- a/src/styles/CustomButton.module.css
+++ b/src/styles/CustomButton.module.css
@@ -1,4 +1,4 @@
-.button {
+.landingbutton {
   border: double 4px transparent;
   border-radius: 50px;
   background-image: linear-gradient(#00000000, #00000000),
@@ -10,7 +10,7 @@
   transition: 0.9s;
 }
 
-.button:hover {
+.landingbutton:hover {
   background-image: linear-gradient(#00000000, #00000000),
     radial-gradient(
       circle at top left,
